# asterisk-kafka

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.centos8  Makefile  README.md  app_kafka.c  cdr_kafka.c  cdr_kafka.conf  cdr_kafka.conf.sample  cel_kafka.c  cel_kafka.conf  res_kafka.c  res_kafka.conf  res_kafka.h
clickhouse/: cdr.sql  cel.sql
kafka/: Dockerfile
